<resources>
    <string name="app_name">Minesweeper</string>
    <string name="start_title">MineSweeper</string>
    <string name="easy_tv">Easy</string>
    <string name="intermediate_tv">Intermediate</string>
    <string name="hard_tv">Hard</string>
    <string name="custom_tv">Custom</string>
    <string name="start_button">Start</string>
    <string name="credit_button">Credits</string>
    <string name="quit_button">Quit</string>
    <string name="back_button">Back</string>
    <string name="highscore_button">Highscore</string>

    <string name="popupTitle">YOU WON!</string>
    <string name="popupScore">Your time: </string>
    <string name="popupsubmitHighScore">Submit high score</string>
</resources>